--- a/config/config.yaml
+++ b/config/config.yaml
@@ -5,7 +5,7 @@ data_ingestion:
   root_dir: artifacts/data_ingestion
   source_URL: https://universe.roboflow.com/ds/wrkNC7zQLk?key=0wdzIbcOBR
   local_data_file: artifacts/data_ingestion/data.zip
-  unzip_dir: artifacts/data_ingestion
+  unzip_dir: artifacts/data_ingestion/data.yaml
 
 
 
@@ -20,6 +20,7 @@ prepare_model:
 
 training:
   root_dir: artifacts/training
+
  
 
   
